--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.6.2",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lint": "^6.8.1",
     "@codemirror/state": "^6.4.1",
