--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "codemirror": "^6.0.1",
     "eslint": "^8.57.1",
     "eslint-linter-browserify": "^9.11.0",
+    "mixpanel-browser": "^2.55.1",
     "planck": "^1.0.5"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.50.0",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
